Put lists on separate pages to avoid clutter

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,86 +1,8 @@
+%h4
+  =link_to "The 10 Most Influential Economics Papers Of All Time", "/static_pages/top10"
 
-.container
-  .row
-    .col-xs-6.list
-      %h4 The 10 Most Influential Economics Papers Of All Time
-      %ol
-        %li
-          .title= link_to "The Use of Knowledge in Society (1945)", "http://www.aeaweb.org/aer/top20/35.4.519-530.pdf"
-          .author Friedrich Hayek
-          .description Prices must be the focal point of all economics decisions.
-
-        %li
-          .title= link_to "The Cost of Capital, Corporation Finance and the Theory of Investment (1958)", "http://www.aeaweb.org/aer/top20/48.3.261-297.pdf"
-          .author Franco Modigliani and Merton Miller
-          .description A firm's total market value is invariant to its borrowing behavior.
-
-        %li
-          .title= link_to "Do Stock Prices Move Too Much to be Justified by Subsequent Changes in Dividends? (1981)", "http://www.aeaweb.org/aer/top20/35.4.519-530.pdf"
-          .author Robert Shiller
-          .description Stock price volatility is far too great to be simply attributed to new information about future real dividends.
-
-        %li
-          .title= link_to "An Almost Ideal Demand System (1980)", "http://www.aeaweb.org/aer/top20/70.3.312-326.pdf"
-          .author Angus S. Deaton and John Muellbauer
-          .description You can predict household demand based on the relative costs of "subsistence" versus "bliss".
-
-        %li
-          .title= link_to "Uncertainty and the Welfare Economics of Medical Care (1963)", "http://www.aeaweb.org/aer/top20/53.5.941-973.pdf"
-          .author Kenneth J. Arrow
-          .description The health care market is too plagued by moral hazard and consumers' lack of information to be viewed as free.
-
-        %li
-          .title= link_to "Some International Evidence on Output-Inflation Tradeoffs (1973)", "http://www.aeaweb.org/aer/top20/63.3.326-334.pdf"
-          .author Robert E. Lucas Jr.
-          .description You can model what happens when consumers make decisions without knowing whether a  price change also signals a relative price change.
-
-        %li
-          .title= link_to "The Role of Monetary Policy (1968)", "http://www.aeaweb.org/aer/top20/58.1.1-17.pdf"
-          .author Milton Friedman
-          .description There exists a "natural rate of unemployment," or the number of jobs a given economy can support.
-
-        %li
-          .title= link_to "Monopolistic Competition and Optimum Product Diversity", "http://www.aeaweb.org/aer/top20/67.3.297-308.pdf"
-          .author Avinash K. Dixit and Joseph E. Stiglitz
-          .description Product variety can influence the way the market dictates resource allocation. The market considers profits, while a social optimum takes into account the consumer's surplus.
-
-        %li
-          .title= link_to "A Theory of Production", "http://www.aeaweb.org/aer/top20/18.1.139-165.pdf"
-          .author Charles W. Cobb and Paul H. Douglas
-          .description You can figure out how much production a given amount of capital and labor can yield.
-
-        %li
-          .title= link_to "Optimal Taxation and Public Production", "http://www.aeaweb.org/aer/top20/61.1.8-27.pdf"
-          .author Peter A. Diamond and James A. Mirrlees
-          .description It is possible to set taxes that minimize distortions and disincentives, and eliminate production inefficiencies.
-
-    .col-xs-6.list
-      %h4 The Controversy Over Reinhart and Rogoff's Claim That Debt Reduces Growth
-      %ol
-        %li
-          .title= link_to "Growth In a Time of Debt (January 2010)", "http://www.nber.org/papers/w15639.pdf"
-          .author Carmen M. Reinhart and Kenneth S. Rogoff
-          .description Policymakers should be concerned about the rise of government debt after the 2008 financial crisis. When debt levels reach 90% of GDP, a country’s growth rate falls by 1%. When debt levels rise above 90%, the growth rate falls by half. 
-
-        %li
-          .title= link_to "The Impact of High Government Debt on Economic Growth and Its Channels: An Empirical Investigation for the Euro Area (August 2010)", "http://core.kmi.open.ac.uk/download/pdf/6380060.pdf"
-          .author Cristina Checherita and Philipp Rother
-          .description In consensus with Reinhart-Rogoff, growth rates in European countries fall when debt levels reach 90-100% of GDP. This data strengthens the case for a policy of “ambitious debt reduction” in the euro area.
-
-        %li
-          .title= link_to "Does high public debt consistently stifle economic growth? A critique of Reinhart and Rogoff (April 2013)", "https://umassmed.edu/uploadedFiles/QHS/Camb.%20J.%20Econ.-2013-Herndon-cje-bet075.pdf"
-          .author Thomas Herndon, Michael Ash and Robert Pollin
-          .description Reinhart-Rogoff’s “Growth In a time of Debt” distorts the relationship between debt and GDP growth. Their miscalculation is the result of coding errors, the exclusion of some data, and the inappropriate weighting of summary statistics. GDP growth is not dramatically different when debt exceeds 90% of GDP.
-
-        %li
-          .title= link_to "The 90% Public Debt Threshold: The Rise and Fall of a Stylised Fact (May 2013)", "http://papers.ssrn.com/sol3/Delivery.cfm/SSRN_ID2274628_code459177.pdf?abstractid=2274628&mirid=1"
-          .author Balázs Égert
-          .description In consensus with Herndon et al, the relation between debt and growth is not robust using formal econometric techniques. The results may suggest that growth declines when debt levels reach 20% of GDP, but there is substantial variation from country to country.
-
-        %li
-          .title= link_to "Reinhart and Rogoff: Responding to Our Critics (April 25, 2013)", "http://www.nytimes.com/2013/04/26/opinion/reinhart-and-rogoff-responding-to-our-critics.html?pagewanted=all&_r=0"
-          .author Carmen M. Reinhart and Kenneth S. Rogoff
-          .description Median values in “Growth In a Time of Debt” are on par with what Herndon et al find. There were coding errors but not statistical ones. The frontier question for research is (ought to be) whether there is a causal link between debt and growth, and if so, how.
+%h4
+  =link_to "The Controversy Over Reinhart and Rogoff's Claim That Debt Reduces Growth", "/static_pages/rogoff"
 
 
 
