--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,6 +29,10 @@ body {
 	}
 }
 
+.feature {
+	border-right: solid 1px #66ccff;
+}
+
 .navbar-fixed-top {
 	background: white;
 	border-bottom: 1px solid #66ccff;
