--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,10 +1,54 @@
-%h4
-  =link_to "The 10 Most Influential Economics Papers Of All Time", "/static_pages/top10"
+.container
+  .row
+    .col-xs-6.list.feature
+      %h3 Featured List for Friday, January 23, 2015
+      %h4
+        =link_to "Drug Prohibition Increases Crime - Papers With Supporting Evidence", "/static_pages/drugcrime"
+      %ol
+        %li
+          .title= link_to "Crack and homicide in New York City, 1988: a conceptually based event analysis (Winter 1989)", "http://scholar.google.com/scholar?cluster=2617309680663051865&hl=en&as_sdt=0,31"
+          .author Paul J. Goldstein, Henry H. Brownstein, Patrick J. Ryan, Patricia A. Bellucci
+          .description 74% of drug-related homicides in New York City during 1988 arose from doing business in a black market (systemic violence): territorial disputes, eliminating informers, punishing sellers of bogus drugs, etc.
+        
+        %li
+          .title= link_to "The War We Are Losing (1991)", "https://books.google.com/books?id=yXiKruQmEF8C&pg=PA53&dq=the+war+we+are+losing+milton+friedman&hl=en&sa=X&ei=bJXCVOqdDsuegwTTu4LQCQ&ved=0CB8Q6AEwAA#v=onepage&q=the%20war%20we%20are%20losing%20milton%20friedman&f=false"
+          .author Milton Friedman
+          .description Homicides in the US peak in 1933 — the exact year that prohibition of alcohol was ended — and fall rapidly from there. Homicides only start to rise again in the 1960s around the time that President Nixon introduces his drug war.
 
-%h4
-  =link_to "The Controversy Over Reinhart and Rogoff's Claim That Debt Reduces Growth", "/static_pages/rogoff"
+        %li
+          .title= link_to "Is property crime caused by drug use or by drug enforcement policy? (July 1992)", "http://myweb.fsu.edu/bbenson/AE1992.pdf"
+          .author Bruce L. Benson, Iljoong Kim, David W. Rasmussen
+          .description Increases in the enforcement of drug prohibition is associated with a rise in property crime in Florida. There are two explanations. 1) Drug enforcement increases the price of drugs and drug addicts need to supplement their income with income-generating crime. 2) Drug enforcement shifts police resources away from property crimes and weakens deterrence. 
+
+        %li
+          .title= link_to "Spatial Competition In Illicit Drug Markets: The Consequences of Increased Drug Law Enforcement (1993)", "http://journal.srsa.org/ojs/index.php/RRS/article/view/23.3.2/497"
+          .author David W. Rasmussen, Bruce L. Benson, and David L. Sollars
+          .description Drug enforcement in one jurisdiction will increase the size of the drug market in an adjoining jurisdiction, resulting in a higher violent crime rate.
+
+        %li
+          .title= link_to "Determinants of Crime Rates in Latin America and the World (Jan 1998)", "http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.17.6675&rep=rep1&type=pdf"
+          .author Pablo Fajnzylber, Daniel Lederman, and Norman Loazya
+          .description A high drug possession arrest rate is positively associated with a higher homicide rate across countries.
+
+        %li
+          .title= link_to "Violence and US Prohibitions of Drugs and Alcohol (Feb 1999)", "http://www.antoniocasella.eu/archila/MIRON_1999.pdf"
+          .author Jeffrey A. Miron
+          .description The homicide rate is 25-75% higher than it would be in the absence of drug prohibition. The violence occurs because there is no legal way to settle disputes within the drug trade. 
+
+        %li
+          .title= link_to "Violence, Guns, and Drugs: A Cross-Country Analysis (October 2001)", "http://www.jstor.org/discover/10.1086/340507?uid=3739832&uid=2&uid=4&uid=3739256&sid=21105684965743"
+          .author Jeffrey A. Miron
+          .description Differences in enforcement of drug prohibition are an important factor in explaining differences in violence rates across countries.
 
 
+    .col-xs-6
+      %h3 Past Lists
+
+      %h4
+        =link_to "Controversy Over Reinhart and Rogoff's Claim That Debt Reduces Growth", "/static_pages/rogoff"
+
+      %h4
+        =link_to "Top 10 Most Influential Economics Papers Of All Time", "/static_pages/top10"
 
 
 
