--- a/app/views/static_pages/rogoff.html.haml
+++ b/app/views/static_pages/rogoff.html.haml
@@ -1,5 +1,5 @@
 .list
-  %h4 The Controversy Over Reinhart and Rogoff's Claim That Debt Reduces Growth
+  %h4 Controversy Over Reinhart and Rogoff's Claim That Debt Reduces Growth
   %ol
     %li
       .title= link_to "Growth In a Time of Debt (January 2010)", "http://www.nber.org/papers/w15639.pdf"
