--- a/app/views/static_pages/top10.html.haml
+++ b/app/views/static_pages/top10.html.haml
@@ -1,5 +1,5 @@
 .list
-  %h4 The 10 Most Influential Economics Papers Of All Time
+  %h4 Top 10 Most Influential Economics Papers Of All Time
   %ol
     %li
       .title= link_to "The Use of Knowledge in Society (1945)", "http://www.aeaweb.org/aer/top20/35.4.519-530.pdf"
