--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 #nav-wrapper
   %nav.navbar-fixed-top.navbar-default
     .container-fluid
-      .navbar-left.pull-left= link_to "Sylaby", root_path, id: "logo"
+      .navbar-left.pull-left= link_to "ResearchGPS", root_path, id: "logo"
       .navbar-right.pull-right
-        Curated lists of research in economics
+        The best new papers in economics, every day
       
