--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,5 +3,6 @@
     .container-fluid
       .navbar-left.pull-left= link_to "Sylaby", root_path, id: "logo"
       .navbar-right.pull-right
-        Curated lists of research in economics
+        The best new research in economics, every day
+      
       
