--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,3 +1,9 @@
 %li.title= link_to "#{item.title}", "#{item.url}"
 %li.description= item.description
 %li.votes=item.votes
+%span.timestamp
+  Posted
+  = time_ago_in_words(item.created_at)
+  ago
+
+
