--- a/app/views/upvotes/create.js.erb
+++ b/app/views/upvotes/create.js.erb
@@ -1,2 +1,2 @@
-$('#item-' + '<%= @item.id %>' + ' .votes').html("<%= @item.upvotes.count %>")
+$('#item-' + '<%= @item.id %>' + ' .votes').html("<%= @item.upvotes_count %>")
 
