--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,10 +9,10 @@
   
   %body
     = render 'layouts/header'
-    %div
+    .container
       -flash.each do |key,value|
-        = content_tag(:div, value.html_safe, class: "alert alert-#{key}")
+        = content_tag(:div, value, class: "alert alert-#{key}")
       = yield
-        
+      
 
 
