--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,56 @@
-#nav-wrapper
-  %nav.navbar-fixed-top.navbar-default
-    .container-fluid
-      .navbar-left.pull-left= link_to "ResearchGPS", root_path, id: "logo"
-      .navbar-right.pull-right
-        The best new papers in economics, every day
+/ %header.navbar.navbar-fixed-top
+/   .navbar-inner
+/     .container
+/       = link_to "Research GPS", root_path, id: "logo"
+/       %nav
+/         %ul.nav.pull-right
+/           %li Login
 
-      
+%nav
+  .container
+    .row
+      .col-xs-9
+        %ul.list-inline.heading
+          %li
+            %span.glyphicon.glyphicon-map-marker
+          %li
+            %ul
+              %li= link_to "Research GPS", root_path, id: "logo"
+              %li Navigate the best research in economics
+          %li.pull-right Login
+  
+
+
+
+
+/   <header class="navbar navbar-fixed-top navbar-inverse">
+/   <div class="navbar-inner">
+/     <div class="container">
+/       <%= link_to "Ethan's Emporium", root_path, id: "logo" %>
+/       <nav>
+/         <ul class="nav pull-right">
+/           <li><%= link_to "Home", root_path %></li>
+/           <li><%= link_to "Help", help_path %></li>
+/           <% if signed_in? %>
+/             <li><%= link_to "Users", users_path %></li>
+/             <li id="fat-menu" class="dropdown">
+/               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+/                 Account <b class="caret"></b>
+/               </a>
+/               <ul class="dropdown-menu">
+/                 <li><%= link_to "Profile", current_user %></li>
+/                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+/                 <li class="divider"></li>
+/                 <li>
+/                   <%= link_to "Sign out", signout_path, method: "delete" %>
+/                 </li>
+/               </ul>
+/             </li>
+/           <% else %>
+/             <li><%= link_to "Sign in", signin_path %></li>
+/           <% end %>
+/         </ul>
+/       </nav>
+/     </div>
+/   </div>
+/ </header>
