--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,8 +16,9 @@
           %li
             %ul
               %li= link_to "Research GPS", root_path, id: "logo"
-              %li Navigate the best research in economics
-          %li.pull-right Login
+              %li.tagline Your roadmap to the best research in economics
+      .col-xs-3.navbar-btn
+        = link_to "Login", '#'
   
 
 
