Change styling on home page

--- a/app/views/email_signups/_email_signup_form.html.haml
+++ b/app/views/email_signups/_email_signup_form.html.haml
@@ -3,7 +3,7 @@
   .row
     .col-xs-8
       %ul.list-inline
-        %li The best new research collections, delivered to your inbox daily!
+        %li The best new research collections, delivered to your inbox weekly!
     .col-xs-4
       %ul.list-inline
         %li= f.text_field :email, placeholder: "Your email..."
