--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,9 +16,11 @@
           %li
             %ul
               %li= link_to "Research GPS", root_path, id: "logo"
-              %li.tagline Your roadmap to the best research in economics
+              %li.tagline Your roadmap to the minimum wage debate
       .col-xs-3.navbar-btn
         = link_to "Login", '#'
+        |
+        = link_to "My Library", '#'
   
 
 
