--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -3,10 +3,6 @@
     .row
       .col-xs-10
         %ul.list-inline
-          / %li
-          /   = form_for @upvote, remote: true do |f|
-          /     = f.hidden_field :item_id, value: item.id
-          /     = f.submit "#{item.upvotes_count} Upvote", class: "btn btn-large"
           %li  
             %ul
               %li.title= item.title
@@ -14,4 +10,5 @@
       .col-xs-2
         %ul.list-inline.pull-right
           %li
-            %span.glyphicon.glyphicon-plus
+            - if user_signed_in?
+              = render partial: 'items/add_user_item_form', object: item, as: 'item'
