--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,5 +1,7 @@
-.email_signup
-  = render 'email_signups/email_signup_form'
+/ .email_signup
+/   = render 'email_signups/email_signup_form'
+
+= render 'shared/signup'
 
 .feed
   = render 'shared/feed'
