--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,12 +7,22 @@
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"}
     = render 'layouts/shim'
   
-  %body
-    = render 'layouts/header'
-    .container
-      -flash.each do |key,value|
-        = content_tag(:div, value, class: "alert alert-#{key}")
-      = yield
-      
+  %body.single
+    / #wrapper
+    / # = render 'layouts/header'
+    / .container
+    / -flash.each do |key,value|
+    /   = content_tag(:div, value, class: "alert alert-#{key}")
+    .main
+      .container
+        = render 'layouts/header'
+        = yield
+    %footer.footer
+      .container
+        %span.copy
+          2015 Research GPS
+        %span.drive-by.fr
+          %span Because the long-run growth rate of knowledge depends on T
+
 
 
